[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
js-sys = "0.3.60"
gloo-utils = "0.1.5"